Refactored housing import logic.